Fix integration tests